# groundero

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  groundero.py  pyproject.toml
groundero/: __init__.py  build.py  citation_retrieval.py  cli.py  config.py  document_store.py  groundero_core.py  install.py  query.py  zotero_client.py
tests/: __init__.py  test_config.py  test_zotero_client.py
